2007-04-06  Uwe Kindler <uwe_kindler@web.de>

	* cdl/phy_eth_drivers.cdl: 
	* src/KS8721.c: Add support for Micrel KS8721 PHY
	
2007-01-17  John Eigelaar <jeigelaar@mweb.co.za>

	* cdl/phy_eth_drivers.cdl: 
	* src/DM9161A.c: Add support for Davicom 9161A.

2006-04-07  Andrew Lunn  <andrew.lunn@ascom.ch>

	* doc/eth_phy.sgml: Fixed a few typos

2006-03-30  Jay Foster <jay@systech.com>
	* include/eth_phy.h:  Add default mode value for _eth_phy_cfg().
	* cdl/phy_eth_drivers.cdl: Add support for ICS189x.
	* include/eth_phy_dev.h:
	* src/AM79C874.c:
	* src/DP83847.c:
	* src/INLXT972.c: Make debug output CDL configurable.
	* src/eth_phy.c: Fix bug in _eth_phy_init() that prevented using
					 a PHY MII address other than 0.
	* src/ics189x.c: New

2005-08-25  Markus Schade <marks@peppercon.de>

	* src/INLXT972.c: 
	* cdl/phy_eth_drivers.cdl: Add support for Intel LXT972

2004-10-04  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/phy_eth_drivers.cdl: We call the delay function via VV so we
	require VV support.

2003-11-07  Gary Thomas  <gary@mlbassoc.com>

	* src/DP83847.c: 
	* src/AM79C874.c: 
	* cdl/phy_eth_drivers.cdl: Make auto-negotiation timeout configurable.

2003-09-11  Gary Thomas  <gary@mlbassoc.com>

	* include/eth_phy.h: Minor improvement in status bitfield [comments]

	* doc/eth_phy.sgml: New file - add basic documentation on PHY API.

2003-08-26  Gary Thomas  <gary@mlbassoc.com>

	* src/DP83847.c: 
	* src/AM79C874.c: New file(s) - driver(s) for PHY devices.

	* src/eth_phy.c: 
	* include/eth_phy_dev.h: 
	* include/eth_phy.h: 
	* cdl/phy_eth_drivers.cdl: Add device/chip specific drivers.

2003-08-19  Gary Thomas  <gary@mlbassoc.com>

	* src/eth_phy.c: 
	* include/eth_phy.h: 
	* cdl/phy_eth_drivers.cdl: New file(s) - generic API for dealing
	with ethernet PHY devices, allowing network drivers more flexibility.

//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####