@@ -1,3 +1,8 @@
+2008-08-05  Uwe Kindler <uwe_kindler@web.de>
+
+	* cdl/phy_eth_drivers.cdl: 
+	* src/KSZ8001.c: Add support for Micrel KSZ8001 PHY
+	
 2007-04-06  Uwe Kindler <uwe_kindler@web.de>
 
 	* cdl/phy_eth_drivers.cdl: 
